# singularity

./: pyproject.toml
Desktop/Hackathons/singularity/src/: main.py
data/: transactions.csv
src/: test.ipynb
