[project]
name = "singularity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "kafka-python>=2.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "panda>=0.3.1",
    "pathway>=0.27.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]
